Consider supporting like query method keyword
Closes gh-43